Add up- and downvote functionality
Add up- and downvote buttons in the languages_table.html-File. Add EventHandler in the languages_table.js-File
which will call a Meteor.Method. The Meteor-Method gets called on the client- and the server.
(see "Latency compensation" for more details).

--- a/client/views/languages/languages_table.html
+++ b/client/views/languages/languages_table.html
@@ -13,6 +13,8 @@
         <tr>
           <td>{{name}}</td>
           <td>{{votes}}</td>
+          <td><input type="button" class="upvote btn btn-success" value="Upvote"/></td>
+          <td><input type="button" class="downvote btn btn-danger" value="Downvote"/></td>
         </tr>
       {{/each}}
     </tbody>
